Prevent double border on mobile nav

--- a/assets/mobile.scss
+++ b/assets/mobile.scss
@@ -91,6 +91,7 @@
 					display: block;
 					padding: 6px;
 					border: 1px solid #ccc;
+					margin-top: -1px;
 					height: 24px;
 					color: #000;
 					text-decoration: none;
